# breath_detector_cpp

./: CMakeLists.txt  CMakeLists.txt.bak  README.md  breath_detector.cpp  breath_detector.h  main.cpp  opencv.cpp
